# bitshift-increment

./: CMakeLists.txt  README.md
src/: increment_by_one_abs.c  increment_by_one_abs.h  main.c
